--- a/extension/backend/package.json
+++ b/extension/backend/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
     "@tgwf/co2": "^0.14.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "nodemon": "^3.1.0"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon server.js"
   }
 }
